fixed vertical align in mobile browser- footer

--- a/style.css
+++ b/style.css
@@ -2634,7 +2634,6 @@ BDO[DIR="rtl"] {
     }
     
 	.copyright {
-		text-align:center;
 		margin-top:10px;
 		vertical-align: middle;
 		
